# foncier_orchestration

./: Dockerfile  README.md  dependencies.py  main.py  models.py  publisher.py  pyproject.toml  task.py
dto/: data.py  process.py  task.py  users.py
schema/: process.py  task.py
services/: data.py  enveloppe.py  sig.py  task.py
